Make changes to final portfolio link.

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             </div>
             <!-- Project 12 -->
             <div class="col-sm-4">
-              <img class="img-responsive" src="resources/images/my-github-pages-site.png" alt="Image of the Colmar Academy final capstone project" />
-              <h4 class="text-center"><a href="https://mkleemjr.github.io/" target="_blank">Final Capstone: Colmar Academy</a></h4>
+              <img class="img-responsive" src="resources/images/colmar-academy.png" alt="Image of the Colmar Academy final capstone project" />
+              <h4 class="text-center"><a href="https://mkleemjr.github.io/colmar-academy" target="_blank">Final Capstone: Colmar Academy</a></h4>
             </div>
           </div>
         </div>
