--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
+            <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
@@ -42,7 +42,7 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
-            </li>
+            </li> -->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -58,8 +58,8 @@
           <div>
             <img src="resources/images/mkleemoff.jpg" alt="Picture of Michael Kleemoff, Jr." />
           </div>
-          <p>I am the web developer you need to see when you desire custom-made, beautiful, responsive websites.</p><br>
-          <span><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></span>
+          <p>I am a front-end web developer based in New York City, NY.</p><br>
+          <!-- <span><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></span> -->
         </div>
       </section>
 
@@ -70,20 +70,20 @@
           <h1 class="text-center sect-title">Technical Skills</h1>
 
           <!-- 1x2 Bootstrap grid of skills with icons -->
-          <div class="row">
+          <!-- <div class="row"> -->
           <!-- Frontend Column -->
-          <div class="col-sm-6 skill text-center">
+          <div class="col-sm-12 skill text-center">
             <span aria-hidden="true" class="fa fa-photo fa-5x"></span>
             <h3>Frontend</h3>
             <p>HTML5</p>
             <p>CSS3</p>
-            <p>Sass</p>
+            <!-- <p>Sass</p> -->
             <p>Bootstrap</p>
             <p>JavaScript</p>
             <p>Git and GitHub</p>
           </div>
           <!-- Backend Column -->
-          <div class="col-sm-6 skill text-center">
+          <!-- <div class="col-sm-6 skill text-center">
             <span aria-hidden="true" class="fa fa-cog fa-5x"></span>
             <h3>Backend</h3>
             <p>SQL</p>
@@ -92,7 +92,7 @@
             <p>Node.js</p>
             <p>Ruby</p>
             <p>jQuery</p>
-          </div>
+          </div> -->
         </div>
       </section>
 
