--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
-    <title>Michael Kleemoff, Jr.: Web Developer</title>
+    <title>Michael Kleemoff: Web Developer</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" rel="stylesheet">
@@ -54,11 +54,11 @@
       <!-- Jumbotron -->
       <section class="jumbotron" id="web-dev">
         <div class="fluid-container text-center">
-          <h1>Michael Kleemoff, Jr.: Web Developer</h1>
+          <h1>Michael Kleemoff: Front-End Web Developer</h1>
           <div>
-            <img src="resources/images/mkleemoff.jpg" alt="Picture of Michael Kleemoff, Jr." />
+            <img src="resources/images/mkleemoff.jpg" alt="Picture of Michael Kleemoff" />
           </div>
-          <p>I am a front-end web developer based in New York City, NY.</p><br>
+          <p>Hi, I am a front-end web developer based in New York City, NY.</p><br>
           <!-- <span><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></span> -->
         </div>
       </section>
