--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
           <div class="navbar-header">
-            <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="#web-dev">Michael Kleemoff, Jr.: Web Developer</a>
+            <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <a class="navbar-brand" href="#web-dev">Michael Kleemoff: Software Development Engineer</a>
           </div>
 
         <!-- Dropdown Menu -->
@@ -54,11 +54,11 @@
       <!-- Jumbotron -->
       <section class="jumbotron" id="web-dev">
         <div class="fluid-container text-center">
-          <h1>Michael Kleemoff: Front-End Web Developer</h1>
+          <h1>Michael Kleemoff: Software Development Engineer</h1>
           <div>
-            <img src="resources/images/mkleemoff.jpg" alt="Picture of Michael Kleemoff" />
+            <img src="resources/images/tech-profile1.jpg" alt="Picture of Michael Kleemoff" />
           </div>
-          <p>Hi, I am a front-end web developer based in New York City, NY.</p><br>
+          <p>Hi, I am a Software Development Engineer based in New York City, NY.</p><br>
           <!-- <span><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></span> -->
         </div>
       </section>
@@ -77,9 +77,14 @@
             <h3>Frontend</h3>
             <p>HTML5</p>
             <p>CSS3</p>
+            <p>XML</p>
             <!-- <p>Sass</p> -->
             <p>Bootstrap</p>
             <p>JavaScript</p>
+            <p>jQuery</p>
+            <p>Ajax</p>
+            <p>Node.js</p>
+            <p>React.js</p>
             <p>Git and GitHub</p>
           </div>
           <!-- Backend Column -->
@@ -89,7 +94,6 @@
             <p>SQL</p>
             <p>React.js</p>
             <p>Angular.JS</p>
-            <p>Node.js</p>
             <p>Ruby</p>
             <p>jQuery</p>
           </div> -->
