--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <p>Node.js</p>
             <p>React.js</p>
             <p>Git and GitHub</p>
+            <p>Linux</p>
           </div>
           <!-- Backend Column -->
           <!-- <div class="col-sm-6 skill text-center">
