--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!-- Frontend Column -->
           <div class="col-sm-12 skill text-center">
             <span aria-hidden="true" class="fa fa-photo fa-5x"></span>
-            <h3>Frontend</h3>
+            <!-- <h3>Frontend</h3> -->
             <p>HTML5</p>
             <p>CSS3</p>
             <p>XML</p>
