--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="text-right">Copyright &copy; 2018 Michael Kleemoff, Jr. All rights reserved.</footer>
+    <footer class="text-right">Copyright &copy; 2019 Michael Kleemoff All rights reserved.</footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
